smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/expected-shape-id-after-type.smithy
// Parse error at line 4, column 8 near `(N`: Expected a valid identifier character, but found '(' | Model
namespace com.foo

string (Nope)
